# OpenGL

./: CMakeLists.txt  glad.c  main.cpp  todo.txt
include/: fps_counter.h  gl.h  glfw_window.h  shader.h  texture.h
include/mesh/: cube.h
shaders/: shader.frag  shader.vert
src/: fps_counter.cpp  glfw_window.cpp  main.cpp  shader.cpp  texture.cpp
src/mesh/: cube.cpp
